# prism-anchor

./: .gitignore  INTEGRATION_TESTS.md  TECHNICAL_SEO_HANDLER_FIXED.md  main.py  pyproject.toml  pytest.ini
misc/: activity.mmd  class_diagram.puml
src/audit/: __init__.py  audit.py  audit_error.py  audit_handler.py  audit_result.py  audit_step.py  content_audit_handler.py  crawler_audit_handler.py  technical_seo_handler.py
src/core/: __init__.py  core.py
src/setup/: __init__.py  setup.py
tests/: __init__.py  test_core.py  test_crawler_audit_handler.py  test_integration_workflow.py  test_real_website_integration.py  test_setup.py
tests/audit/: __init__.py  test_audit.py  test_crawler_audit_handler.py
tests/core/: __init__.py  test_core.py
tests/integration/: __init__.py  test_technical_seo_integration.py
tests/setup/: __init__.py
